feat(language): change and store language
Now language selected is stored in local storage, and if th language is
changed, a custom event is emitted, that the templatecomponenent
subscribes to and so it changes the languages of all component

--- a/frontend/locales/de/common.json
+++ b/frontend/locales/de/common.json
@@ -31,5 +31,19 @@
     "add_credentials": "",
     "edit_profile": "",
     "thrid": ""
+  },
+  "review": {
+    "Id": "",
+    "Hr_id": "",
+    "Producer": ""
+  },
+  "new_${model_name}": "",
+  "forms": {
+    "submit": ""
+  },
+  "lng": {
+    "choose": "Sprache wahlen",
+    "german": "Deutsch",
+    "english": "English"
   }
 }
